<resources>
    <string name="app_name">Raksha</string>
    <string name="alert">Alert</string>
    <string name="enter_contact_details_of_the_person">Enter contact details of the person</string>
    <string name="enter_contact_number_of_first_person">Enter contact number of first person</string>
    <string name="enter_contact_number_of_second_person">Enter contact number of second person</string>
    <string name="enter_contact_number_of_third_person">Enter contact number of third person</string>
    <string name="enter_contact_number_of_fourth_person">Enter contact number of fourth person</string>
    <string name="enter_contact_number_of_fifth_person">Enter contact number of fifth person</string>
    <string name="contact_police">Contact Police</string>
    <string name="update_contact">Update Contact</string>
    <string name="save">Save</string>
    <string name="scream">Scream</string>
    <string name="contact_list">Contact list</string>
    <string name="personimg">personimg</string>
    <string name="i_m_in_danger">I\'m in danger</string>
    <string name="main1">Are you in trouble?</string>
    <string name="main2">Are you being followed?</string>
    <string name="main3">eve teased? harassed?</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="getting_started_with_this_app">Getting started with this app</string>
    <string name="safety_tips">Safety tips</string>
    <string name="positive_stories">Positive stories</string>
    <string name="savecon">Update contacts</string>
    <string name="stop">Stop</string>
</resources>
